Fixed issue #31264 - A11Y fixes

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -519,6 +519,10 @@ ACS_AddIndexLabelA11yDesc = Select the items you want to add to the index:
 AddToIndexTitle = Add To Index
 AddToIndexLabel = Column:
 
+ACS_AddToIndexComboA11yName=Available columns combo box
+ACS_AddToIndexComboA11yDesc=Combo box containing all available columns.
+ACS_AddToIndexDialogA11yDesc=Add to index dialog.
+
 # Add view dialog
 
 AddViewTitle = Add View
