#31637 major xml version ported from release35 branch.

--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -41,6 +41,8 @@ Microsystems, Inc. All Rights Reserved.
         <filter  token="API_SPEC_VERS_SUBST" value="${xml.api.specification.version}"/>
         <filter token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
+        <property name="xml.implementation.version" value="${buildnumber}"/>
+        <filter token="XML_BUILD_NUMBER_SUBST"  value="${xml.implementation.version}"/>
     </target>
 
     <target name="compile">
