--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -41,6 +41,8 @@ Microsystems, Inc. All Rights Reserved.
         <filter token="CATALOG_SPEC_VERS_SUBST" value="${xml.catalog.specification.version}"/>
         <filter    token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
+        <property name="xml.implementation.version" value="${buildnumber}"/>
+        <filter token="XML_BUILD_NUMBER_SUBST"  value="${xml.implementation.version}"/>
         <ant dir="${nbroot}/xml/external" target="unscramble"/>
     </target>
 
