--- a/xsl/build.xml
+++ b/xsl/build.xml
@@ -43,6 +43,8 @@ Microsystems, Inc. All Rights Reserved.
         <filter  token="XSL_SPEC_VERS_SUBST" value="${xml.xsl.specification.version}"/>
         <filter token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
+        <property name="xml.implementation.version" value="${buildnumber}"/>
+        <filter token="XML_BUILD_NUMBER_SUBST"  value="${xml.implementation.version}"/>
         <ant dir="${nbroot}/xml/external" target="unscramble"/>
         <ant dir="${nbroot}/libs/external" target="unscramble"/>
     </target>
