Fixed issue #31258 - A11Y fixes

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -312,6 +312,7 @@ ACS_AddDriverDatabasePrefixTextFieldA11yName = Database URL prefix text field
 ACS_AddDriverDatabasePrefixTextFieldA11yDesc = Prefix to be used as a template to specify the database URL.
 ACS_AddDriverURLNotesA11yName = Add Driver dialog description
 ACS_AddDriverURLNotesA11yDesc = Note: the package (ZIP/JAR, typically) containing the driver code must be in the NetBeans classpath (add to the lib/ext/ directory).
+ACS_AddDriverDialogA11yDesc = Add JDBC driver dialog.
 
 # Test driver dialog
 
@@ -338,6 +339,8 @@ MSG_NoProcedures = Warning: No procedures were found. Check your database.
 MSG_TestProcedureColumns = Test {0}: Procedure {1} contains {2} columns.
 MSG_NoProcedureColumns = Warning: No procedure columns were found in procedure {0}. Check your database.
 MSG_ReplaceFileOrNot = File {0} already exists. Do you want to replace it?
+
+ACS_TestDriverDialogA11yDesc = Test JDBC driver dialog.
 
 # Remove driver dialog
 
@@ -408,6 +411,7 @@ ACS_CreateTableColumnTableA11yName = Table of columns
 ACS_CreateTableColumnTableA11yDesc = Table of columns and their parameters.
 ACS_CreateTableAddButtonTitleA11yDesc = Add column to the table.
 ACS_CreateTableRemoveButtonTitleA11yDesc = Remove column from the table.
+ACS_CreateTableDialogA11yDesc = Create table dialog.
 
 CreateTable_0 = Key
 CreateTable_1 = Index
@@ -479,6 +483,7 @@ ACS_AddTableColumnIndexNameComboBoxA11yDesc = Combo box containing all available
 ACS_AddTableColumnCheckTitleA11yDesc = Select this checkbox to add constraints to the column.
 ACS_AddTableColumnCheckTextAreaA11yName = Constraints text area
 ACS_AddTableColumnCheckTextAreaA11yDesc = Set constraints for the column in this text area.
+ACS_AddTableColumnDialogA11yDesc = Add column dialog.
 
 # Drop table dialog
 
@@ -549,6 +554,7 @@ RecreateTableRenameTable = Name the table
 RecreateTableNewName = Name:
 RecreateTableNewName_Mnemonic = N
 RecreateTableRenameNotes = Create table script:
+RecreateTableRenameNotes_Mnemonic = C
 EditCommand=Edit table script
 EditCommand_Mnemonic=E
 ReloadCommand=Reload table script from file
@@ -562,6 +568,7 @@ ACS_RecreateTableTableScriptTextAreaA11yName = Table Script
 ACS_RecreateTableTableScriptTextAreaA11yDesc = SQL command to create this table.
 ACS_EditCommandA11yDesc=Click to edit SQL command to create this table.
 ACS_ReloadCommandA11yDesc=Click to reload table script from file.
+ACS_RecreateTableDialogA11yDesc = Recreate table dialog.
 
 # Command Editor
 
