A11y fixes for issue #31306

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -630,6 +630,7 @@ ACS_UnsupportedDialogReadOnlyTextA11yName = Read-only connection description
 ACS_UnsupportedDialogReadOnlyTextA11yDesc = Connect without the ability to modify the database.
 ACS_UnsupportedDialogButtonOKA11yDesc = Connect
 ACS_UnsupportedDialogButtonCancelA11yDesc = Cancel
+ACS_UnsupportedDialogA11yDesc = Unsupported database dialog.
 
 # String properties
 
