Partial fix of bug #31651 - a11y: accessibility problems in the Find in Files dialog

--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -26,9 +26,8 @@ TEXT_BUTTON_CUSTOMIZE=Modify Search
 ACS_TEXT_BUTTON_CUSTOMIZE=N/A
 TEXT_BUTTON_SEARCH=Search
 ACS_TEXT_BUTTON_SEARCH=N/A
-TEXT_BUTTON_CANCEL=Close
+TEXT_BUTTON_CANCEL=&Close
 ACS_TEXT_BUTTON_CANCEL=N/A
-TEXT_BUTTON_CANCEL_MNEM=C
 TEXT_BUTTON_HELP=Help
 ACS_TEXT_BUTTON_HELP=N/A
 TEXT_BUTTON_SORT=\ Sort by Name
@@ -81,12 +80,12 @@ HINT_result_package=package: {0}
 
 #Location info panel texts
 TEXT_LABEL_LOCATION=Location of the file:
-TEXT_LABEL_FILESYSTEM=Filesystem:
+TEXT_LABEL_FILESYSTEM=&Filesystem:
 TEXT_BUTTON_RANGE=null
 TEXT_LABEL_DURING_LAST=null
 TEXT_BUTTON_PRECEDING=null
 TEXT_LABEL_BEGIN_DATE=null
-TEXT_LABEL_PATH=Path:
+TEXT_LABEL_PATH=&Path:
 TEXT_NO_FILESYSTEM=unknown
 HINT_SHOW_EXPLORER=Show node in Explorer
 
@@ -107,8 +106,7 @@ ACS_TEXT_BUTTON_SHOW=N/A
 TEXT_BUTTON_SHOW_MNEM=E
 ACS_PackageName=N/A
 ACS_FileSystemName=N/A
-TEXT_LABEL_POSITION=Position within the file:
-TEXT_LABEL_POSITION_MNEM=P
+TEXT_LABEL_POSITION=P&osition within the file:
 TEXT_LABEL_SEARCH_RESULTS_MNEM=R
 TEXT_BUTTON_SORT_MNEM=N
 TEXT_BUTTON_UNSORT_MNEM=T
