apisupport/lite was missing from module configs after ttran's removal from stable config.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -163,6 +163,7 @@ config.modules.stable=${config.modules.slim}, \
 config.fixedmodules.stable-with-apisupport=${config.fixedmodules.stable}
 config.modules.stable-with-apisupport=${config.modules.stable}, \
         ant/docs, \
+        apisupport/lite, \
         apisupport, \
         apisupport/ant, \
         apisupport/apidocs
