IZ=31655 Monitor A11y problems (trunk integration)

--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -53,15 +53,24 @@ MON_Title=HTTP Monitor
 #NOI18N
 MON_Transaction_View_F1_Help_ID=ctx_monitorintro
 
+ACS_MON_monitorName=HTTP Monitor
+ACS_MON_monitorDesc=The HTTP Monitor records and replays HTTP requests.
+ACS_MON_Transaction_dataName=Details of the HTTP Monitor data record
+ACS_MON_Transaction_dataDesc=These tabs in the HTTP Monitor show details of the selected data record.
+ACS_MON_treeName=HTTP Monitor data records
+ACS_MON_treeDesc=A tree view of HTTP Monitor data records
+
+ACS_MON_Replay_tabsName=Categories of editable request data
+ACS_MON_Replay_tabsDesc=Each tab represents a category of request data that can be edited prior to replaying the request. 
 ACS_MON_Request_19A11yDesc=Request
 ACS_MON_RequestTable_19A11yName=Request Table
-ACS_MON_RequestTable_19A11yDesc=Request table.
+ACS_MON_RequestTable_19A11yDesc=Request data table
 ACS_MON_Session_24A11yDesc=Session
 ACS_MON_SessionTable_24A11yName=Session Table
-ACS_MON_SessionTable_24A11yDesc=Session table.
+ACS_MON_SessionTable_24A11yDesc=Session data table
 ACS_MON_Client_3A11yDesc=Client
 ACS_MON_ClientTable_3A11yName=Client Table
-ACS_MON_ClientTable_3A11yDesc=Client table.
+ACS_MON_ClientTable_3A11yDesc=Client data table
 ACS_SortButtonUnsortedA11yDesc=Unsorted.
 ACS_SortButtonSortAZA11yDesc=Sorted A-Z.
 ACS_SortButtonSortZAA11yDesc=Sorted Z-A.
@@ -266,7 +275,10 @@ ACS_MON_ParamValueTextAreaA11yDesc=View Value
 
 # Headers
 MON_HTTP_Headers=HTTP headers
+# Used on the data display
 MON_HTTP_Headers_Mnemonic=H
+# Used in the replay dialog, which has a "Help" button
+MON_HTTP_Headers_2_Mnemonic=T
 MON_No_headers=No HTTP headers were recorded
 
 ACS_MON_HTTP_HeadersA11yDesc=HTTP headers
@@ -274,7 +286,7 @@ ACS_MON_HTTP_HeadersTableA11yName=HTTP headers
 ACS_MON_HTTP_HeadersTableA11yDesc=HTTP headers.
 
 # Cookies
-MON_Cookies_Mnemonic=H
+MON_Cookies_Mnemonic=C
 MON_No_headers=No HTTP headers were recorded
 
 ACS_MON_CookiesA11yDesc=HTTP headers
