Add j2eeserver/deprecated into the build

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -138,6 +138,7 @@ config.modules.stable=${config.modules.slim}, \
         extbrowser, \
         i18n, \
         j2eeserver, \
+        j2eeserver/deprecated, \
         jarpackager, \
         javacvs, \
         monitor, \
