#31871 - split tomcat40 and tomcat40-autocompile modules to their own NBMs

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -144,6 +144,7 @@ config.modules.stable=${config.modules.slim}, \
         monitor, \
         schema2beans, \
         tomcatint/tomcat40, \
+        tomcatint/tomcat40autocompile, \
         tomcatint/bundledtomcat, \
         ui/welcome, \
         usersguide, \
