--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -534,6 +534,10 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module tomcatint/bundledtomcat..."/>
     <ant dir="../tomcatint/bundledtomcat" target="netbeans"/>
   </target>
+  <target name="all-tomcatint/tomcat40autocompile" depends="all-tomcatint/tomcat40">
+    <echo message="Building module tomcatint/tomcat40autocompile..."/>
+    <ant dir="../tomcatint/tomcat40autocompile" target="netbeans"/>
+  </target>
   <target name="all-translatedfiles" depends="init">
     <echo message="Building module translatedfiles..."/>
     <ant dir="../translatedfiles" target="netbeans"/>
