#31047: Refresh All action on Filesystems root node.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -6,7 +6,7 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 # Microsystems, Inc. All Rights Reserved.
 
 # VERSIONING (TopLogging, MainWindow)
@@ -74,6 +74,7 @@ AboutTextColor=0x000000
 dataSystemName=Filesystems
 CTL_Repository_Hint=Filesystems provides access to Java classes and other development objects.
 ACSD_DataSystemCustomizer=N/A
+LAB_refresh_all_filesystems=Refresh All
 
 #DesktopNode
 CTL_Desktop_name=Desktop
