--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -300,6 +300,7 @@ UI/Services/Testing=Testing
 org-netbeans-modules-junit-JUnitSettings.settings=JUnit Module Settings
 
 # Templates stuff
+Templates/JUnit=JUnit
 Templates/JUnit/SimpleJUnitTest.java=Simple JUnit TestCase
 
 # Java doc stuff
