--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -46,6 +46,9 @@ stop.when.clean.error=true
 # root of the source tree, separated by commas.
 moduleconfig=stable
 
+# Dist directory for L10N kits
+l10n.dist.dir=l10ndist
+
 config.fixedmodules.platform=core, \
         openide, \
         openide/io, \
@@ -296,3 +299,8 @@ config.modules.sigtest=${config.modules.stable}, \
 config.modules.xml=${local.config.xml}, \
         xml/tree-edit
 config.fixedmodules.xml=
+
+# module config for l10n kit preparation build
+config.modules.l10nkit=${config.modules.stable}, \
+        installer
+config.fixedmodules.l10nkit=${config.fixedmodules.stable}
