Tweaks to Refresh All action: 1. Improved name with mnemonic. 2. Action not SystemAction. 3. Separate top-level class. 4. Actions pool entry. 5. Added to File menu for discoverability.

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -6,7 +6,7 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 # Microsystems, Inc. All Rights Reserved.
 
 #AboutAction
@@ -155,3 +155,6 @@ MSG_Preparing_options=Preparing options...
 CTL_ViewFilesystemsTabAction=Fi&lesystems
 # ViewRuntimeTabAction
 CTL_ViewRuntimeTabAction=Run&time
+
+# RefreshAllFilesystemsAction
+LAB_refresh_all_filesystems=&Refresh All Filesystems
