Rel35 synch - JSP is compiled after add BP - if there is another debugging session, and the servlet is not up-to-date.

--- a/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
+++ b/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
@@ -130,3 +130,6 @@ PROP_breakpoint_source_name=JSP Name
 HINT_breakpoint_source_name=Name of the JSP containing this breakpoint.
 PROP_breakpoint_line_number=Line Number
 HINT_breakpoint_line_number=The line number this breakpoint is set on, if applicable.
+
+CTL_CompilationNotSupported=The web server does not support compiling JSPs from the IDE, \
+therefore debugger will not stop on breakpoints in JSPs.
