Fixed issue #31136. Database commands are not executed in AWT thread anymore. UI changes in DataViewWindow.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -600,6 +600,19 @@ ACS_DataViewTableA11yName = SQL query results
 ACS_DataViewTableA11yDesc = SQL query results.
 ACS_FetchDataTitleA11yDesc = Fetch Data
 
+ACS_DataViewQueryLabelA11yDesc = Command
+QueryLabel_Mnemonic = C
+QueryLabel = Command:
+ACS_DataViewHistoryLabelA11yDesc = Command history
+HistoryLabel_Mnemonic = M
+HistoryLabel = Command history:
+ACS_DataViewResultsLabelA11yDesc = Results
+ResultsLabel_Mnemonic = R
+ResultsLabel = Results:
+ACS_DataViewStatusLabelA11yDesc = Command status
+CommandRunning = Command is running...
+CommandFailed = Command failed.
+
 # Refresh children
 
 RefreshChildrenErrorPrefix = Unable to refresh children
