Add tasklist/html to tasklist-cluster in alpha-update-center build

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -125,6 +125,7 @@ local.config.tasklist=tasklist/api, \
 	tasklist/editor, \
 	tasklist/javadoc, \
 	tasklist/javaparser, \
+	tasklist/html, \
 	tasklist/bugs
 
 local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
