fixed IF requirements

--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -26,9 +26,9 @@ Mount/java/org-netbeans-modules-testtools-jelly2-library.xml=Jelly2 Library
 Menu/Help/HelpShortcuts/org-netbeans-modules-testtools-mainpage.xml=TestTools Module Help
 
 # Module properties:
-OpenIDE-Module-Name: TestTools
+OpenIDE-Module-Name: Test Tools
 OpenIDE-Module-Display-Category: TestTools
-OpenIDE-Module-Short-Description: XTest, Jemmy and Jelly technology preview module. 
+OpenIDE-Module-Short-Description: Module providing additional support for XTest, Jemmy and Jelly technologies. 
 OpenIDE-Module-Long-Description=Module is intended to show the way to all XTest, Jemmy and JellyTools beginners \
  and help them to create automated tests from scratch. It provides documentation of used technologies. \
  It makes easy to create proper test harness directory structures, build scripts, configuration files, \
